# homework10

./: .gitignore  pyproject.toml
quotestoscrape_project/: manage.py
quotestoscrape_project/quotes/: admin.py  models.py
quotestoscrape_project/quotes/migrations/: 0001_initial.py
quotestoscrape_project/quotestoscrape/: asgi.py  settings.py  urls.py  wsgi.py
